--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://jayarghargh.com"
+  "homepage": "https://jayarghargh.github.io/jrr-react/"
 }
